--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,21 @@ height: 80px;
 display: flex;
 }
 
+.header__size {
+    font-size: 28px;
+}
+
+.otherheader__size {
+    font-size: 22px;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+    max-height: 50vh;
+    padding: 20px;
+
+}
 .nav__container {
 width: 100%;
 max-width: 1200px;
@@ -66,4 +81,66 @@ text-decoration: none;
 
 header {
     height: calc(100vh - 80px);
+}
+.header__container {
+    padding-top:32px;
+    width: 100%;
+    max-width: 720px;
+    margin: 0 auto;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.header__description {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.heading__img--wrapper {
+    padding: 20px;
+}
+
+
+h1 {
+color: #7342d6;
+margin-bottom: 22px;
+text-align: center;
+}
+
+h2 {
+    text-align: center;
+    margin-bottom: 28px;
+}
+button {
+    cursor: pointer;
+}
+button:active {
+    transform:translateY(1px);
+}
+
+.btn {
+    background-color:#7342d6;
+    color: white;
+    padding: 12px 24px;
+    font-size: 20px;
+    border-radius: 4px;
+    
+}
+
+.container {
+    padding: 56px 0;
+}
+
+.row{
+width: 100%;
+max-width: 1200px;
+margin: 0 auto;
+}
+
+HIGHLIGHTS
+
+.highlight__wrapper {
+    display: flex;
 }
